SCANMAVEN-314 Fix ProxyTest on GitHub Actions